test: update tests for PermissionService